--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item--current">
+          <li class="site-list__item site-list__item--active">
             <a>
               Главная
             </a>
@@ -52,12 +52,12 @@
     <h2 class="visually-hidden">Наши преимущества</h2>
     <ul class="advantages__list">
       <li class="advantages__item">
-        <div class="advantage__true-town">
+        <div class="advantages__true-town">
         <h3 class="advantages__title">Настоящий городок</h3>
         <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
       </div>
-      <div class="advantage__true-town-photo">
-        <img class="advantage__photo" src="" width="" height="3" alt="Фото города.">
+      <div class="advantages__true-town-photo">
+        <img class="advantages__photo" src="" width="" height="3" alt="Фото города.">
       </div>
       </li>
       <li class="advantages__item">
@@ -73,10 +73,10 @@
         <p class="advantages__description">Не только китайского, но и местного производства!</p>
       </li>
       <li class="advantages__item">
-        <div class="advantage__devils-bridge-photo">
-          <img class="advantage__photo" src="" width="" height="3" alt="Фото моста.">
+        <div class="advantages__devils-bridge-photo">
+          <img class="advantages__photo" src="" width="" height="3" alt="Фото моста.">
         </div>
-        <div class="advantage__devils-bridge">
+        <div class="advantages__devils-bridge">
         <h3 class="advantages__title">Там есть мост дьявола</h3>
         <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
       </div>
