--- a/source/index.html
+++ b/source/index.html
@@ -43,13 +43,13 @@
   </header>
   <main class="main-container">
     <div class="welcome-anthem">
-      <img class="welcome-logo" src="img/images/main-welcome.svg" width="458" height="352" alt="Логотип Welcome.">
+      <img class="welcome-logo" src="img/images/main-welcome.svg" width="282" height="214" alt="Логотип Welcome.">
 </div>
 <section class="intro">
   <h1 class="intro__title">Седона-небольшой городок в Аризоне,
   заслуживающий большего!
 </h1>
-<p class="intro__discription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+<p class="intro__discription">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
 </section>
 <section class="advantages">
     <h2 class="visually-hidden">Наши преимущества </h2>
@@ -60,31 +60,31 @@
         <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <div class="advantages__true-town-photo">
-        <img class="advantages__photo" src="img/images/photos/index-view-1.jpg" width="512px" height="256px" alt="Фото города.">
+        <img class="advantages__photo" src="img/images/photos/index-view-1.jpg" width="520px" height="260px" alt="Фото города.">
       </div>
       </li>
       <li class="advantages__item">
-        <img class="logo" src="img\images\logos\house.svg" width="81" height="68" alt="Логотип дома.">
+        <img class="logo" src="img\images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
         <h3 class="advantages__title">Жилье</h3>
         <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </li>
       <li class="advantages__item">
-        <img class="logo" src="img\images\logos\food.svg" width="81" height="68" alt="Логотип дома.">
+        <img class="logo" src="img\images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
         <h3 class="advantages__title">Еда</h3>
         <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </li>
       <li class="advantages__item">
-        <img class="logo" src="img\images\logos\souveniers.svg" width="81" height="68" alt="Логотип дома.">
+        <img class="logo" src="img\images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
         <h3 class="advantages__title">Сувениры</h3>
         <p class="advantages__description">Не только китайского, но и местного производства!</p>
       </li>
       <li class="advantages__item">
-        <div class="advantages__devils-bridge-photo">
-          <img class="advantages__photo" src="img/images/photos/index-view-2.jpg" width="512px" height="256px" alt="Фото моста.">
-        </div>
         <div class="advantages__true-town">
         <h3 class="advantages__title">Там есть мост дьявола</h3>
         <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        <div class="advantages__devils-bridge-photo">
+          <img class="advantages__photo" src="img/images/photos/index-view-2.jpg" width="520px" height="260px" alt="Фото моста.">
+        </div>
       </div>
       </li>
       <li class="advantages__item grey-back">
