--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
     <section class="advantages">
       <h2 class="visually-hidden">Наши преимущества </h2>
       <ul class="advantages__list">
-        <li class="advantages__item advantages__item—blueback">
+        <li class="advantages__item advantages__item--blueback">
           <h3 class="advantages__title">Настоящий городок</h3>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <div class="advantages__true-town-photo">
@@ -79,7 +79,7 @@
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
-        <li class="advantages__item advantages__item—blueback">
+        <li class="advantages__item advantages__item--blueback">
           <h3 class="advantages__title">Там есть мост дьявола</h3>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           <div class="advantages__devils-bridge-photo">
@@ -88,15 +88,15 @@
           </div>
           </div>
         </li>
-        <li class="advantages__item advantages__item—greyback">
+        <li class="advantages__item advantages__item--greyback">
           <h3 class="advantages__title">Небольшая площадь</h3>
           <p class="advantages__description">Все интересные места находятся очень близко</p>
         </li>
-        <li class="advantages__item advantages__item—greyback">
+        <li class="advantages__item advantages__item--greyback">
           <h3 class="advantages__title">Красивая дорога</h3>
           <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="advantages__item advantages__item—greyback">
+        <li class="advantages__item advantages__item--greyback">
           <h3 class="advantages__title">Мало туристов</h3>
           <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
@@ -106,7 +106,8 @@
       <h2 class="booking__title">Заинтересовались?</h2>
       <p class="booking__description">Укажите преполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="booking__navigation-link" href="hotels.html">Поиск гостиницы в Седоне<img src="#" alt="Отели.">
+      <a class="booking__navigation-link" href="hotels.html" style="text-decoration: none;color: #fff" ;> Найти
+        гостиницу
       </a>
     </section>
     <section class="map">
