--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,73 +9,73 @@
   <script src="less.min.js" type="text/javascript"></script>
 </head>
 
-<body class="catalog__body">
-  <header class="catalog-header">
-    <a class="catalog-header__main-logo">
+<body class="page__body">
+  <header class="main-header">
+    <a class="main-header__main-logo">
       <img src="img/images/logos/sedona-headder.svg" width="185" height="96" alt="Логтип «Sedona».">
     </a>
-    <nav class="catalog-nav">
-      <button class="catalog-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
       </button>
     </nav>
   </header>
-  <main class="catalog-container">
-    <div class="catalog-anthem">
-      <img class="catalog-logo" src="img/images/catalog-welcome.svg" width="229px" height="39px" alt="Надпись Sedona.">
+  <main class="main-container">
+    <div class="catalog-welcome">
+      <img class="main-logo" src="img/images/catalog-welcome.svg" width="229px" height="39px" alt="Надпись Sedona.">
     </div>
-    <section class="catalog-intro">
-      <h1 class="catalog-intro__title">
+    <section class="intro">
+      <h1 class="intro__title">
         Фото и видео
       </h1>
-      <p class="catalog-intro__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
+      <p class="intro__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
         о политике и экономике.</p>
     </section>
-    <section class="catalog-advantages">
-      <ul class="catalog-advantages__list">
-        <li class="catalog-advantages__item">
-          <div class="catalog-advantages__road-photo">
-            <img class="catalog-advantages__photo" src="img/images/photos/road.jpg" width="280px" height="280px"
+    <section class="catalog-photos">
+      <ul class="catalog-photos__list">
+        <li class="catalog-photos__item">
+          <div class="catalog-photos__photos-photo">
+            <img class="catalog-photos__photo" src="img/images/photos/road.jpg" width="280px" height="280px"
               alt="Фото дороги.">
           </div>
-          <h3 class="catalog-advantages__title">Неродные просторы</h3>
-          <p class="catalog-advantages__author">Автор фото: Борис</p>
-          <p class="catalog-advantages__ikes-amount">1350</p>
+          <h3 class="catalog-photos__title">Неродные просторы</h3>
+          <p class="catalog-photos__author">Автор фото: Борис</p>
+          <p class="catalog-photos__likes-amount">1350</p>
         </li>
-        <li class="catalog-advantages__item">
-          <div class="catalog-advantages__plant-photo">
-            <img class="catalog-advantages__photo" src="img/images/photos/plant.jpg" width="280px" height="280px"
+        <li class="catalog-photos__item">
+          <div class="catalog-photos__photos-photo">
+            <img class="catalog-photos__photo" src="img/images/photos/plant.jpg" width="280px" height="280px"
               alt="Фото растения.">
           </div>
-          <h3 class="catalog-advantages__title">Местная растительность</h3>
-          <p class="catalog-advantages__author">Автор фото: Сергей</p>
-          <p class="catalog-advantages__ikes-amount">143</p>
+          <h3 class="catalog-photos__title">Местная растительность</h3>
+          <p class="catalog-photos__author">Автор фото: Сергей</p>
+          <p class="catalog-photos__likes-amount">143</p>
         </li>
-        <li class="catalog-advantages__item">
-          <div class="catalog-advantages__serpantine-photo">
-            <img class="catalog-advantages__photo" src="img/images/photos/serpantine.jpg" width="280px" height="280px"
+        <li class="catalog-photos__item">
+          <div class="catalog-photos__photos-photo">
+            <img class="catalog-photos__photo" src="img/images/photos/serpantine.jpg" width="280px" height="280px"
               alt="Фото серпантина.">
           </div>
-          <h3 class="catalog-advantages__title">Дорога на север</h3>
-          <p class="catalog-advantages__author">Автор фото: Петр</p>
-          <p class="catalog-advantages__ikes-amount">96</p>
+          <h3 class="catalog-photos__title">Дорога на север</h3>
+          <p class="catalog-photos__author">Автор фото: Петр</p>
+          <p class="catalog-photos__likes-amount">96</p>
         </li>
-        <li class="catalog-advantages__item">
-          <div class="catalog-advantages__bridge-photo">
-            <img class="catalog-advantages__photo" src="img/images/photos/bridge.jpg" width="280px" height="280px"
+        <li class="catalog-photos__item">
+          <div class="catalog-photos__photos-photo">
+            <img class="catalog-photos__photo" src="img/images/photos/bridge.jpg" width="280px" height="280px"
               alt="Фото моста дьявола.">
           </div>
-          <h3 class="catalog-advantages__title">Мост дьявола</h3>
-          <p class="catalog-advantages__author">Автор фото: Антон</p>
-          <p class="catalog-advantages__ikes-amount">254</p>
+          <h3 class="catalog-photos__title">Мост дьявола</h3>
+          <p class="catalog-photos__author">Автор фото: Антон</p>
+          <p class="catalog-photos__likes-amount">254</p>
         </li>
+      </ul>
     </section>
-    <section class="catalog-booking">
-      <h2 class="catalog-booking__title">Все еще сомневаетесь?</h2>
-      <p class="catalog-booking__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+    <section class="outro">
+      <h2 class="outro__title">Все еще сомневаетесь?</h2>
+      <p class="outro__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
         очередной раз!</p>
-      <img class="catalog-video" src="img/images/photos/video.jpg.jpg" width="280px" height="177px"
+      <img class="outro-video" src="img/images/photos/video.jpg.jpg" width="280px" height="177px"
         alt="видеопрезентация.">
-      </a>
     </section>
   </main>
   <footer class="footer">
