--- a/source/index.html
+++ b/source/index.html
@@ -25,17 +25,17 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html" style="text-decoration: none;color: #fff" ;>
+            <a href="http://localhost:3000/catalog.html" style="text-decoration: none;color: #fff" ;>
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" style="text-decoration: none;color: #fff" ;>
+            <a href="http://localhost:3000/form.html" style="text-decoration: none;color: #fff" ;>
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#" style="text-decoration: none;color: #fff" ;>
+            <a href="https://htmlacademy.ru/study" style="text-decoration: none;color: #fff" ;>
               Html academy
             </a>
           </li>
@@ -102,11 +102,11 @@
         </li>
       </ul>
     </section>
-    <section class="booking">
-      <h2 class="booking__title">Заинтересовались?</h2>
-      <p class="booking__description">Укажите преполагаемые даты поездки,
+    <section class="outro">
+      <h2 class="outro__title">Заинтересовались?</h2>
+      <p class="outro__description">Укажите преполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="booking__navigation-link" href="hotels.html" style="text-decoration: none;color: #fff" ;> Найти
+      <a class="outro__navigation-link" href="https://clck.ru/Vmr3g" style="text-decoration: none;color: #fff" ;> Найти
         гостиницу
       </a>
     </section>
