--- a/4/index.html
+++ b/4/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
-  <title> Sedona</title>
+  <title>Sedona</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet/less" type="text/css" href="style.less">
   <script src="less.min.js" type="text/javascript"></script>
   <base href="https://htmlacademy-adaptive.github.io/2229883-sedona-27/4/">
 </head>
-<body class ="page__body">
+
+<body class="page__body">
   <header class="main-header">
     <a class="main-header__main-logo">
       <img src="img/images/logos/sedona-headder.svg" width="185" height="96" alt="Логтип «Sedona».">
@@ -24,17 +26,17 @@
             </a>
           </li>
           <li class="site-list__item">
-              <a href="photo.html">
+            <a href="http://localhost:3000/catalog.html" style="text-decoration: none;color: #fff" ;>
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-              <a href="form.html">
+            <a href="http://localhost:3000/form.html" style="text-decoration: none;color: #fff" ;>
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a href="https://htmlacademy.ru/study" style="text-decoration: none;color: #fff" ;>
               Html academy
             </a>
           </li>
@@ -45,98 +47,99 @@
   <main class="main-container">
     <div class="welcome-anthem">
       <img class="welcome-logo" src="img/images/main-welcome.svg" width="282" height="214" alt="Логотип Welcome.">
-</div>
-<section class="intro">
-  <h1 class="intro__title">Седона-небольшой городок в Аризоне,
-  заслуживающий большего!
-</h1>
-<p class="intro__discription">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-</section>
-<section class="advantages">
-    <h2 class="visually-hidden">Наши преимущества </h2>
-    <ul class="advantages__list">
-      <li class="advantages__item">
-        <div class="advantages__true-town">
-        <h3 class="advantages__title">Настоящий городок</h3>
-        <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-      </div>
-      <div class="advantages__true-town-photo">
-        <img class="advantages__photo" src="img/images/photos/index-view-1.jpg" width="520px" height="260px" alt="Фото города.">
-      </div>
-      </li>
-      <li class="advantages__item">
-        <img class="logo" src="img\images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
-        <h3 class="advantages__title">Жилье</h3>
-        <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-      </li>
-      <li class="advantages__item">
-        <img class="logo" src="img\images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
-        <h3 class="advantages__title">Еда</h3>
-        <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-      </li>
-      <li class="advantages__item">
-        <img class="logo" src="img\images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
-        <h3 class="advantages__title">Сувениры</h3>
-        <p class="advantages__description">Не только китайского, но и местного производства!</p>
-      </li>
-      <li class="advantages__item">
-        <div class="advantages__true-town">
-        <h3 class="advantages__title">Там есть мост дьявола</h3>
-        <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-        <div class="advantages__devils-bridge-photo">
-          <img class="advantages__photo" src="img/images/photos/index-view-2.jpg" width="520px" height="260px" alt="Фото моста.">
-        </div>
-      </div>
-      </li>
-      <li class="advantages__item grey-back">
-        <h3 class="advantages__title">Небольшая площадь</h3>
-        <p class="advantages__description">Все интересные места находятся очень близко</p>
-      </li>
-      <li class="advantages__item grey-back">
-        <h3 class="advantages__title">Красивая дорога</h3>
-        <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </li>
-      <li class="advantages__item grey-back">
-        <h3 class="advantages__title">Мало туристов</h3>
-        <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
-      </li>
-    </ul>
-</section>
-<section class="booking">
-  <h2 class="booking__title">Заинтересовались?</h2>
-<p class="booking__discription">Укажите преполагаемые даты поездки,
-и мы покажем вам лучшие предложения гостиниц в Седоне</p>
- <a class="booking__navigation-link" href="hotels.html">Поиск гостиницы в Седоне<img src="#" alt="Отели.">
-</a>
-</section>
-<section class="map">
-  <img src="" width="" height="" alt="Седона на карте">
-</section>
+    </div>
+    <section class="intro">
+      <h1 class="intro__title">Седона-небольшой городок в Аризоне,
+        заслуживающий большего!
+      </h1>
+      <p class="intro__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </section>
+    <section class="advantages">
+      <h2 class="visually-hidden">Наши преимущества </h2>
+      <ul class="advantages__list">
+        <li class="advantages__item advantages__item--blueback">
+          <h3 class="advantages__title">Настоящий городок</h3>
+          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <div class="advantages__true-town-photo">
+            <img class="advantages__photo" src="img/images/photos/index-view-1.jpg" width="520px" height="260px"
+              alt="Фото города.">
+          </div>
+        </li>
+        <li class="advantages__item">
+          <img class="logo" src="img\images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
+          <h3 class="advantages__title">Жилье</h3>
+          <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li class="advantages__item">
+          <img class="logo" src="img\images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
+          <h3 class="advantages__title">Еда</h3>
+          <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="advantages__item">
+          <img class="logo" src="img\images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
+          <h3 class="advantages__title">Сувениры</h3>
+          <p class="advantages__description">Не только китайского, но и местного производства!</p>
+        </li>
+        <li class="advantages__item advantages__item--blueback">
+          <h3 class="advantages__title">Там есть мост дьявола</h3>
+          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <div class="advantages__devils-bridge-photo">
+            <img class="advantages__photo" src="img/images/photos/index-view-2.jpg" width="520px" height="260px"
+              alt="Фото моста.">
+          </div>
+          </div>
+        </li>
+        <li class="advantages__item advantages__item--greyback">
+          <h3 class="advantages__title">Небольшая площадь</h3>
+          <p class="advantages__description">Все интересные места находятся очень близко</p>
+        </li>
+        <li class="advantages__item advantages__item--greyback">
+          <h3 class="advantages__title">Красивая дорога</h3>
+          <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages__item advantages__item--greyback">
+          <h3 class="advantages__title">Мало туристов</h3>
+          <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+    <section class="outro">
+      <h2 class="outro__title">Заинтересовались?</h2>
+      <p class="outro__description">Укажите преполагаемые даты поездки,
+        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="outro__navigation-link" href="https://clck.ru/Vmr3g" style="text-decoration: none;color: #fff" ;> Найти
+        гостиницу
+      </a>
+    </section>
+    <section class="map">
+      <img src="" width="" height="" alt="Седона на карте">
+    </section>
   </main>
   <footer class="footer">
-      <div class="footer__hashtag">
-        <span>#visitsedona</span>
-      </div>
-      <ul class="social">
-          <li class="social__item">
-               <a class="social__link" href="https://vk.com/htmlacademy">
-                    <span class="visually-hidden">vkontakte.</span>
-               </a>
-          </li>
-          <li class="social__item">
-               <a class="social__link" href="https://t.me/htmlacademy">
-                    <span class="visually-hidden">telegram.</span>
-               </a>
-          </li>
-          <li class="social__item">
-               <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
-                    <span class="visually-hidden">youtube.</span>
-               </a>
-             </li>
-            </ul>
-      <div class="footer__copyright">
-        <span class="visually-hidden">Разработано.</span>
-      </div>
+    <div class="footer__hashtag">
+      <span>#visitsedona</span>
+    </div>
+    <ul class="social">
+      <li class="social__item">
+        <a class="social__link" href="https://vk.com/htmlacademy">
+          <span class="visually-hidden">vkontakte.</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="https://t.me/htmlacademy">
+          <span class="visually-hidden">telegram.</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">youtube.</span>
+        </a>
+      </li>
+    </ul>
+    <div class="footer__copyright">
+      <span class="footer__text">Разработано</span>
+    </div>
   </footer>
 </body>
+
 </html>
