--- a/source/index.html
+++ b/source/index.html
@@ -25,17 +25,17 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/catalog.html" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="catalog.html" ;>
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/form.html" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="form.html" ;>
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="https://htmlacademy.ru/study" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="https://htmlacademy.ru/study" ;>
               Html academy
             </a>
           </li>
@@ -65,17 +65,17 @@
           </div>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Жилье</h3>
           <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Еда</h3>
           <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
@@ -105,7 +105,7 @@
       <h2 class="outro__title">Заинтересовались?</h2>
       <p class="outro__description">Укажите преполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="outro__navigation-link" href="https://clck.ru/Vmr3g" style="text-decoration: none;color: #fff";> Найти
+      <a class="button" href="https://clck.ru/Vmr3g" ;> Найти
         гостиницу
       </a>
     </section>
