--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,22 +22,22 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a>
+            <a class="site-list__link" href="index.html";>
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/catalog.html" style="text-decoration: none;color: #fff" ;>
+            <a>
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/form.html" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="http://localhost:3000/form.html";>
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="https://htmlacademy.ru/study" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="https://htmlacademy.ru/study";>
               Html academy
             </a>
           </li>
